--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@hookform/resolvers": "^3.9.1",
-    "@mui/icons-material": "^6.1.10",
-    "@mui/material": "^6.1.10",
-    "@mui/material-nextjs": "^6.1.0",
-    "@mui/styled-engine-sc": "^6.1.10",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
+    "@mui/material-nextjs": "^5.15.14",
+    "@mui/styled-engine-sc": "^5.15.14",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -79,7 +79,7 @@
     "react-leaflet": "^4.2.1",
     "react-resizable-panels": "^2.1.7",
     "react-slick": "^0.30.3",
-    "react-swipeable-views": "^0.14.0",
+    "react-swipeable": "^7.0.1",
     "recharts": "2.15.0",
     "slick-carousel": "^1.8.1",
     "sonner": "^1.7.1",
